# tofinv

./: .gitignore  README.md  Snakefile  generate_dummy_data.py  pyproject.toml  run_dummy.sh  run_local.sh  setup.py
config/: config_base.yml  config_dummy.yml  input_dummy_test.txt
tofinv/: area.py  evaluation.py  masking.py  nn_models.py  noise.py  noise_injection.py  optim.py  summary.py  surrogate.py  train.py  utils.py
tofinv/synthdata/: processing.py  sampling.py  simulation.py
