[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tofinv"
version = "1.0.0"
description = "Velocity quantification pipeline"
requires-python = ">=3.10"
dependencies = [
    # Standard PyPI Packages
    "joblib==1.4.2",
    "matplotlib==3.9.3",
    "nibabel==5.3.2",
    "numpy==1.26.4",
    "omegaconf==2.3.0",
    "pandas==2.2.3",
    "scikit-learn==1.6.0",
    "scikit-optimize==0.10.2",
    "scipy==1.14.1",
    "seaborn==0.13.2",
    "surfa==0.6.1",
    "snakemake==7.32.4",
    "torch==2.5.1",
    "PuLP==2.7.0",
    
    # Custom GitHub Packages
    "tofmodel @ git+https://github.com/baarbod/tofmodel.git@master",
    "autocsfmask @ git+https://github.com/baarbod/autocsfmask.git@master"
]